--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-southeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-southeast-1.json
@@ -204,6 +204,50 @@
   "Location": "apse1-az1"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "apse1-az1"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "apse1-az1"
  },
@@ -925,6 +969,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "apse1-az1"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "apse1-az1"
  },
  {
@@ -1952,6 +2040,50 @@
   "Location": "apse1-az2"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "apse1-az2"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "apse1-az2"
  },
@@ -2673,6 +2805,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "apse1-az2"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "apse1-az2"
  },
  {
@@ -3637,6 +3813,50 @@
  },
  {
   "InstanceType": "c5n.xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "apse1-az3"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
   "Location": "apse1-az3"
  },
  {
