--- a/moto/ec2/resources/instance_type_offerings/region/ap-southeast-2.json
+++ b/moto/ec2/resources/instance_type_offerings/region/ap-southeast-2.json
@@ -236,6 +236,50 @@
   "Location": "ap-southeast-2"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-southeast-2"
  },
@@ -913,6 +957,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "ap-southeast-2"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "ap-southeast-2"
  },
  {
