--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-northeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-northeast-1.json
@@ -180,6 +180,50 @@
   "Location": "apne1-az1"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "apne1-az1"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "apne1-az1"
  },
@@ -321,6 +365,46 @@
  },
  {
   "InstanceType": "c6i.xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.12xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.16xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.24xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.2xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.32xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.4xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.8xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.large",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.metal",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "c6id.xlarge",
   "Location": "apne1-az1"
  },
  {
@@ -960,6 +1044,50 @@
   "Location": "apne1-az1"
  },
  {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
+  "Location": "apne1-az1"
+ },
+ {
   "InstanceType": "m6g.12xlarge",
   "Location": "apne1-az1"
  },
@@ -1069,6 +1197,46 @@
  },
  {
   "InstanceType": "m6i.xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.12xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.16xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.24xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.2xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.32xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.4xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.8xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.large",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.metal",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "m6id.xlarge",
   "Location": "apne1-az1"
  },
  {
@@ -1468,6 +1636,46 @@
   "Location": "apne1-az1"
  },
  {
+  "InstanceType": "r6id.12xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.16xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.24xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.2xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.32xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.4xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.8xlarge",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.large",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.metal",
+  "Location": "apne1-az1"
+ },
+ {
+  "InstanceType": "r6id.xlarge",
+  "Location": "apne1-az1"
+ },
+ {
   "InstanceType": "t1.micro",
   "Location": "apne1-az1"
  },
@@ -1825,6 +2033,50 @@
  },
  {
   "InstanceType": "c5n.xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
   "Location": "apne1-az2"
  },
  {
@@ -2485,6 +2737,78 @@
  },
  {
   "InstanceType": "m5n.xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.12xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.2xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.3xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.6xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.large",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.metal",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m5zn.xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "apne1-az2"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "apne1-az2"
  },
  {
@@ -3468,6 +3792,50 @@
   "Location": "apne1-az4"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "apne1-az4"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "apne1-az4"
  },
@@ -4289,6 +4657,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "apne1-az4"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "apne1-az4"
  },
  {
