--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-northeast-3.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/ap-northeast-3.json
@@ -72,6 +72,34 @@
   "Location": "apne3-az1"
  },
  {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
+  "Location": "apne3-az1"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "apne3-az1"
  },
@@ -376,6 +404,42 @@
   "Location": "apne3-az1"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "apne3-az1"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "apne3-az1"
  },
@@ -488,6 +552,118 @@
   "Location": "apne3-az1"
  },
  {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.12xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.16xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.2xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.4xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.8xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.large",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.medium",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6gd.xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
+  "Location": "apne3-az1"
+ },
+ {
   "InstanceType": "t3.2xlarge",
   "Location": "apne3-az1"
  },
@@ -529,6 +705,38 @@
  },
  {
   "InstanceType": "x2idn.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.16xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.24xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.2xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.32xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.4xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.8xlarge",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.metal",
+  "Location": "apne3-az1"
+ },
+ {
+  "InstanceType": "x2iedn.xlarge",
   "Location": "apne3-az1"
  },
  {
@@ -604,6 +812,34 @@
   "Location": "apne3-az2"
  },
  {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
+  "Location": "apne3-az2"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "apne3-az2"
  },
@@ -908,6 +1144,42 @@
   "Location": "apne3-az2"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "apne3-az2"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "apne3-az2"
  },
@@ -1020,6 +1292,118 @@
   "Location": "apne3-az2"
  },
  {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.12xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.16xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.2xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.4xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.8xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.large",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.medium",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6gd.xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
+  "Location": "apne3-az2"
+ },
+ {
   "InstanceType": "t3.2xlarge",
   "Location": "apne3-az2"
  },
@@ -1061,6 +1445,38 @@
  },
  {
   "InstanceType": "x2idn.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.16xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.24xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.2xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.32xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.4xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.8xlarge",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.metal",
+  "Location": "apne3-az2"
+ },
+ {
+  "InstanceType": "x2iedn.xlarge",
   "Location": "apne3-az2"
  },
  {
@@ -1141,6 +1557,34 @@
  },
  {
   "InstanceType": "c5d.xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
   "Location": "apne3-az3"
  },
  {
@@ -1424,6 +1868,42 @@
   "Location": "apne3-az3"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "apne3-az3"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "apne3-az3"
  },
@@ -1557,6 +2037,82 @@
  },
  {
   "InstanceType": "r5d.xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "apne3-az3"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
   "Location": "apne3-az3"
  },
  {
