--- a/moto/ec2/resources/instance_type_offerings/availability-zone-id/us-east-2.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone-id/us-east-2.json
@@ -500,6 +500,10 @@
   "Location": "use2-az1"
  },
  {
+  "InstanceType": "c7g.metal",
+  "Location": "use2-az1"
+ },
+ {
   "InstanceType": "c7g.xlarge",
   "Location": "use2-az1"
  },
@@ -1316,6 +1320,42 @@
   "Location": "use2-az1"
  },
  {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "use2-az1"
+ },
+ {
   "InstanceType": "p2.16xlarge",
   "Location": "use2-az1"
  },
@@ -1893,6 +1933,42 @@
  },
  {
   "InstanceType": "r6in.xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "use2-az1"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "use2-az1"
  },
  {
@@ -2665,6 +2741,10 @@
  },
  {
   "InstanceType": "c7g.medium",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "c7g.metal",
   "Location": "use2-az2"
  },
  {
@@ -3492,7 +3572,47 @@
   "Location": "use2-az2"
  },
  {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "use2-az2"
+ },
+ {
   "InstanceType": "mac1.metal",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "mac2.metal",
   "Location": "use2-az2"
  },
  {
@@ -4077,6 +4197,42 @@
  },
  {
   "InstanceType": "r6in.xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "use2-az2"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "use2-az2"
  },
  {
@@ -4793,6 +4949,10 @@
  },
  {
   "InstanceType": "c7g.medium",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "c7g.metal",
   "Location": "use2-az3"
  },
  {
@@ -5540,6 +5700,114 @@
   "Location": "use2-az3"
  },
  {
+  "InstanceType": "m6idn.12xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.16xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.24xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.2xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.32xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.4xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.8xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.large",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6idn.xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.12xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.16xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.24xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.2xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.32xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.4xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.8xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.large",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m6in.xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "use2-az3"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "use2-az3"
  },
@@ -6113,6 +6381,42 @@
  },
  {
   "InstanceType": "r6in.xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "use2-az3"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "use2-az3"
  },
  {
