--- a/moto/ec2/resources/instance_type_offerings/availability-zone/ap-northeast-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/ap-northeast-1.json
@@ -204,6 +204,50 @@
   "Location": "ap-northeast-1a"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-northeast-1a"
  },
@@ -1025,6 +1069,50 @@
  },
  {
   "InstanceType": "m5zn.xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "ap-northeast-1a"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "ap-northeast-1a"
  },
  {
@@ -2116,6 +2204,50 @@
   "Location": "ap-northeast-1c"
  },
  {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-northeast-1c"
  },
@@ -2257,6 +2389,46 @@
  },
  {
   "InstanceType": "c6i.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.metal",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "c6id.xlarge",
   "Location": "ap-northeast-1c"
  },
  {
@@ -2896,6 +3068,50 @@
   "Location": "ap-northeast-1c"
  },
  {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
   "InstanceType": "m6g.12xlarge",
   "Location": "ap-northeast-1c"
  },
@@ -3005,6 +3221,46 @@
  },
  {
   "InstanceType": "m6i.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.metal",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "m6id.xlarge",
   "Location": "ap-northeast-1c"
  },
  {
@@ -3404,6 +3660,46 @@
   "Location": "ap-northeast-1c"
  },
  {
+  "InstanceType": "r6id.12xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.16xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.24xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.2xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.32xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.4xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.8xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.large",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.metal",
+  "Location": "ap-northeast-1c"
+ },
+ {
+  "InstanceType": "r6id.xlarge",
+  "Location": "ap-northeast-1c"
+ },
+ {
   "InstanceType": "t1.micro",
   "Location": "ap-northeast-1c"
  },
@@ -3761,6 +4057,50 @@
  },
  {
   "InstanceType": "c5n.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.48xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.metal",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "c6a.xlarge",
   "Location": "ap-northeast-1d"
  },
  {
@@ -4421,6 +4761,78 @@
  },
  {
   "InstanceType": "m5n.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.3xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.6xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.metal",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m5zn.xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.12xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.16xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.24xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.2xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.32xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.48xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.4xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.8xlarge",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.large",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.metal",
+  "Location": "ap-northeast-1d"
+ },
+ {
+  "InstanceType": "m6a.xlarge",
   "Location": "ap-northeast-1d"
  },
  {
