--- a/moto/ec2/resources/instance_type_offerings/availability-zone/ap-northeast-3.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/ap-northeast-3.json
@@ -80,6 +80,34 @@
   "Location": "ap-northeast-3a"
  },
  {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-northeast-3a"
  },
@@ -360,6 +388,42 @@
   "Location": "ap-northeast-3a"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "ap-northeast-3a"
  },
@@ -493,6 +557,82 @@
  },
  {
   "InstanceType": "r5d.xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "ap-northeast-3a"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
   "Location": "ap-northeast-3a"
  },
  {
@@ -656,6 +796,34 @@
   "Location": "ap-northeast-3b"
  },
  {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-northeast-3b"
  },
@@ -960,6 +1128,42 @@
   "Location": "ap-northeast-3b"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "ap-northeast-3b"
  },
@@ -1072,6 +1276,118 @@
   "Location": "ap-northeast-3b"
  },
  {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.12xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.16xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.2xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.4xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.8xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.large",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.medium",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6gd.xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
   "InstanceType": "t3.2xlarge",
   "Location": "ap-northeast-3b"
  },
@@ -1113,6 +1429,38 @@
  },
  {
   "InstanceType": "x2idn.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.16xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.24xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.2xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.32xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.4xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.8xlarge",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.metal",
+  "Location": "ap-northeast-3b"
+ },
+ {
+  "InstanceType": "x2iedn.xlarge",
   "Location": "ap-northeast-3b"
  },
  {
@@ -1188,6 +1536,34 @@
   "Location": "ap-northeast-3c"
  },
  {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-northeast-3c"
  },
@@ -1492,6 +1868,42 @@
   "Location": "ap-northeast-3c"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "ap-northeast-3c"
  },
@@ -1604,6 +2016,118 @@
   "Location": "ap-northeast-3c"
  },
  {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.12xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.16xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.2xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.4xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.8xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.large",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.medium",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6gd.xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
   "InstanceType": "t3.2xlarge",
   "Location": "ap-northeast-3c"
  },
@@ -1645,6 +2169,38 @@
  },
  {
   "InstanceType": "x2idn.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.16xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.24xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.2xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.32xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.4xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.8xlarge",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.metal",
+  "Location": "ap-northeast-3c"
+ },
+ {
+  "InstanceType": "x2iedn.xlarge",
   "Location": "ap-northeast-3c"
  }
 ]
