--- a/moto/ec2/resources/instance_type_offerings/availability-zone/us-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/availability-zone/us-east-1.json
@@ -412,6 +412,42 @@
   "Location": "us-east-1a"
  },
  {
+  "InstanceType": "c6in.12xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.16xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.24xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.2xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.32xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.4xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.8xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.large",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c6in.xlarge",
+  "Location": "us-east-1a"
+ },
+ {
   "InstanceType": "c7g.12xlarge",
   "Location": "us-east-1a"
  },
@@ -437,6 +473,10 @@
  },
  {
   "InstanceType": "c7g.medium",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "c7g.metal",
   "Location": "us-east-1a"
  },
  {
@@ -1244,6 +1284,42 @@
   "Location": "us-east-1a"
  },
  {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "us-east-1a"
+ },
+ {
   "InstanceType": "mac2.metal",
   "Location": "us-east-1a"
  },
@@ -1865,6 +1941,10 @@
  },
  {
   "InstanceType": "u-18tb1.112xlarge",
+  "Location": "us-east-1a"
+ },
+ {
+  "InstanceType": "u-24tb1.112xlarge",
   "Location": "us-east-1a"
  },
  {
@@ -2500,6 +2580,42 @@
   "Location": "us-east-1b"
  },
  {
+  "InstanceType": "c6in.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.24xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.32xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c6in.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
   "InstanceType": "c7g.12xlarge",
   "Location": "us-east-1b"
  },
@@ -2525,6 +2641,10 @@
  },
  {
   "InstanceType": "c7g.medium",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "c7g.metal",
   "Location": "us-east-1b"
  },
  {
@@ -3424,6 +3544,114 @@
   "Location": "us-east-1b"
  },
  {
+  "InstanceType": "m6idn.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.24xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.32xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6idn.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.24xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.32xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m6in.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
   "InstanceType": "p2.16xlarge",
   "Location": "us-east-1b"
  },
@@ -3933,6 +4161,114 @@
  },
  {
   "InstanceType": "r6id.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.24xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.32xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6idn.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.24xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.32xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r6in.xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "us-east-1b"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "us-east-1b"
  },
  {
@@ -4780,6 +5116,10 @@
   "Location": "us-east-1c"
  },
  {
+  "InstanceType": "c7g.metal",
+  "Location": "us-east-1c"
+ },
+ {
   "InstanceType": "c7g.xlarge",
   "Location": "us-east-1c"
  },
@@ -5744,6 +6084,42 @@
   "Location": "us-east-1c"
  },
  {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "us-east-1c"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "us-east-1c"
  },
@@ -6317,6 +6693,42 @@
  },
  {
   "InstanceType": "r6in.xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "us-east-1c"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "us-east-1c"
  },
  {
@@ -7160,6 +7572,10 @@
   "Location": "us-east-1d"
  },
  {
+  "InstanceType": "c7g.metal",
+  "Location": "us-east-1d"
+ },
+ {
   "InstanceType": "c7g.xlarge",
   "Location": "us-east-1d"
  },
@@ -8124,6 +8540,42 @@
   "Location": "us-east-1d"
  },
  {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "us-east-1d"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "us-east-1d"
  },
@@ -8720,6 +9172,42 @@
   "Location": "us-east-1d"
  },
  {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
+  "Location": "us-east-1d"
+ },
+ {
   "InstanceType": "t1.micro",
   "Location": "us-east-1d"
  },
@@ -8837,6 +9325,10 @@
  },
  {
   "InstanceType": "u-12tb1.112xlarge",
+  "Location": "us-east-1d"
+ },
+ {
+  "InstanceType": "u-18tb1.112xlarge",
   "Location": "us-east-1d"
  },
  {
@@ -9580,6 +10072,38 @@
   "Location": "us-east-1f"
  },
  {
+  "InstanceType": "c6gn.12xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.16xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.2xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.4xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.8xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.large",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.medium",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c6gn.xlarge",
+  "Location": "us-east-1f"
+ },
+ {
   "InstanceType": "c6i.12xlarge",
   "Location": "us-east-1f"
  },
@@ -9721,6 +10245,10 @@
  },
  {
   "InstanceType": "c7g.medium",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "c7g.metal",
   "Location": "us-east-1f"
  },
  {
@@ -10453,6 +10981,42 @@
  },
  {
   "InstanceType": "m6in.xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "us-east-1f"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
   "Location": "us-east-1f"
  },
  {
