--- a/moto/ec2/resources/instance_type_offerings/region/ap-northeast-3.json
+++ b/moto/ec2/resources/instance_type_offerings/region/ap-northeast-3.json
@@ -92,6 +92,34 @@
   "Location": "ap-northeast-3"
  },
  {
+  "InstanceType": "c5n.18xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "c5n.2xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "c5n.4xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "c5n.9xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "c5n.large",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "c5n.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "c5n.xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
   "InstanceType": "c6g.12xlarge",
   "Location": "ap-northeast-3"
  },
@@ -432,6 +460,42 @@
   "Location": "ap-northeast-3"
  },
  {
+  "InstanceType": "m6gd.12xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.16xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.2xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.4xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.8xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.large",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.medium",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "m6gd.xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
   "InstanceType": "m6i.12xlarge",
   "Location": "ap-northeast-3"
  },
@@ -568,6 +632,118 @@
   "Location": "ap-northeast-3"
  },
  {
+  "InstanceType": "r6g.12xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.16xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.2xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.4xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.8xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.large",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.medium",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6g.xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.12xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.16xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.2xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.4xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.8xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.large",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.medium",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6gd.xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.12xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.16xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.24xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.2xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.32xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.4xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.8xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.large",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "r6i.xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
   "InstanceType": "t2.2xlarge",
   "Location": "ap-northeast-3"
  },
@@ -669,6 +845,38 @@
  },
  {
   "InstanceType": "x2idn.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.16xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.24xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.2xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.32xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.4xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.8xlarge",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.metal",
+  "Location": "ap-northeast-3"
+ },
+ {
+  "InstanceType": "x2iedn.xlarge",
   "Location": "ap-northeast-3"
  }
 ]
