--- a/moto/ec2/resources/instance_type_offerings/region/ap-southeast-3.json
+++ b/moto/ec2/resources/instance_type_offerings/region/ap-southeast-3.json
@@ -336,6 +336,46 @@
   "Location": "ap-southeast-3"
  },
  {
+  "InstanceType": "m6i.12xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.16xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.24xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.2xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.32xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.4xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.8xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.large",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.metal",
+  "Location": "ap-southeast-3"
+ },
+ {
+  "InstanceType": "m6i.xlarge",
+  "Location": "ap-southeast-3"
+ },
+ {
   "InstanceType": "r5.12xlarge",
   "Location": "ap-southeast-3"
  },
