--- a/moto/ec2/resources/instance_type_offerings/region/us-east-1.json
+++ b/moto/ec2/resources/instance_type_offerings/region/us-east-1.json
@@ -528,6 +528,10 @@
   "Location": "us-east-1"
  },
  {
+  "InstanceType": "c7g.metal",
+  "Location": "us-east-1"
+ },
+ {
   "InstanceType": "c7g.xlarge",
   "Location": "us-east-1"
  },
@@ -1496,6 +1500,42 @@
   "Location": "us-east-1"
  },
  {
+  "InstanceType": "m7g.12xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.16xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.2xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.4xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.8xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.large",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.medium",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.metal",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "m7g.xlarge",
+  "Location": "us-east-1"
+ },
+ {
   "InstanceType": "mac1.metal",
   "Location": "us-east-1"
  },
@@ -2089,6 +2129,42 @@
  },
  {
   "InstanceType": "r6in.xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.12xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.16xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.2xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.4xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.8xlarge",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.large",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.medium",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.metal",
+  "Location": "us-east-1"
+ },
+ {
+  "InstanceType": "r7g.xlarge",
   "Location": "us-east-1"
  },
  {
